--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "TestMod",
     "version_number": "1.0.0",
     "website_url": "https://github.com/thunderstore-io",
-    "description": "This is a description for a mod. 250 characters max",
+    "description": "rainworld music modpack for my friends :) YIPPEEE",
     "dependencies": [
         "MythicManiac-TestMod-1.1.0"
     ]
