--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
     "website_url": "https://github.com/thunderstore-io",
     "description": "rainworld music modpack for my friends :) YIPPEEE",
     "dependencies": [
-        "MythicManiac-TestMod-1.1.0"
+        "Steven-Custom_Boombox_music v1.4.0"
     ]
 }
