--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "website_url": "https://github.com/thunderstore-io",
     "description": "rainworld music modpack for my friends :) YIPPEEE",
     "dependencies": [
-        "Steven-Custom_Boombox_Music-1.4.0"
+        "Steven-Custom_Boombox_Music-1.4.0",
         "BepInEx-BepInExPack-5.4.2100"
     ]
 }
